allow-gateway.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-gateway
  namespace: apps
spec:
  selector:
    matchLabels:
      app: httpbin
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        # El asterisco (*) es la clave.
        # Dice: "Si tu ID empieza con esto, pasas".
        - "spiffe://example.org/*"
        - "cluster.local/*"
